# IdeasBox_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: CI.yml  lining_and_type_checking.yml
src/api_v1/: __init__.py  base_types.py
src/api_v1/schemas/: idea.py  mixins.py
src/core/: base_types.py  config.py  utils.py
src/core/db/: __init__.py  abstract_repository.py  abstract_reposytory.py  db_helper.py  idea_repository.py  ideas_repository.py  mongo.py  mongo_repository_factory.py
src/schemas/: idea.py  mixins.py
src/services/: ideas_service.py
