[tool.poetry]
name = "ideasbox-backend"
version = "0.1.0"
description = ""
authors = ["Eytes <yura.shamanov2000@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.3"
motor = "^3.4.0"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.4.26"
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true
allow_redefinition = true

[tool.flake8]
max_line_length = 88
show_source = true
statistics = true
exclude = [
    ".git",
    "__pycache__"
]